# nchaallah_last_cmm

./: Makefile  README.md  main.py  pyproject.toml
data/input/: function_calling_tests.json
data/output/: function_calling_results.json
src/: __main__.py  function_selector.py  main.py  parameter_extractor.py  parser.py  utils.py  validator.py
test/: .gitignore  function_calling_results.json
to_add/: Makefile  fct_calling.py  main.py  main_old.py  parser.py  pyproject.toml
