[project]
name = "call-me-maybe"
version = "0.1.0"
description = "Function calling system using constrained decoding"
requires-python = ">=3.10"

dependencies = [
    "numpy",
    "pydantic",
    "torch",
    "transformers",
    "huggingface_hub",
]

[dependency-groups]
dev = [
    "flake8",
    "mypy",
]

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
warn_return_any = true
warn_unused_ignores = true

[tool.flake8]
max-line-length = 100